@@ -48,9 +48,7 @@
 
 /* Begin PBXBuildFile section */
 		4B3F49080AD8503300491C6E /* jack_cpu.c in Sources */ = {isa = PBXBuildFile; fileRef = 4B3F49070AD8503300491C6E /* jack_cpu.c */; };
-		4B44FAE60C7598370033A72C /* JackServerLaunch.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4B44FAE50C7598370033A72C /* JackServerLaunch.cpp */; };
 		4B44FAE70C7598370033A72C /* JackServerLaunch.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4B44FAE50C7598370033A72C /* JackServerLaunch.cpp */; };
-		4B44FAE80C7598370033A72C /* JackServerLaunch.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4B44FAE50C7598370033A72C /* JackServerLaunch.cpp */; };
 		4B5A1BBE0CD1CC110005BF74 /* midiseq.c in Sources */ = {isa = PBXBuildFile; fileRef = 4B5A1BBD0CD1CC110005BF74 /* midiseq.c */; };
 		4B5A1BDD0CD1CD420005BF74 /* midisine.c in Sources */ = {isa = PBXBuildFile; fileRef = 4B5A1BDC0CD1CD420005BF74 /* midisine.c */; };
 		4B5DB9830CD2429A00EBA5EE /* JackDebugClient.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 4B98AE000931D30C0091932A /* JackDebugClient.cpp */; };
@@ -2367,7 +2365,6 @@
 			buildActionMask = 2147483647;
 			files = (
 				4B699BAA097D421600A18468 /* Jackdmp.cpp in Sources */,
-				4B44FAE60C7598370033A72C /* JackServerLaunch.cpp in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -2460,7 +2457,6 @@
 				4BD4B4D909BACD9600750C0F /* JackTransportEngine.cpp in Sources */,
 				4BC216850A444BAD00BDA09F /* JackServerAPI.cpp in Sources */,
 				4BC216890A444BDE00BDA09F /* JackServerGlobals.cpp in Sources */,
-				4B44FAE80C7598370033A72C /* JackServerLaunch.cpp in Sources */,
 				4BF520540CB8D0E80037470E /* timestamps.c in Sources */,
 				4BAB95BA0B9E20B800A0C723 /* JackPortType.cpp in Sources */,
 				4BAB95EE0B9E21A500A0C723 /* JackAudioPort.cpp in Sources */,
@@ -3267,7 +3263,9 @@
 				OTHER_CPLUSPLUSFLAGS = (
 					"-DMACH_RPC_MACH_SEMA",
 					"-D__SMP__",
+					"$(OTHER_CPLUSPLUSFLAGS_QUOTED_1)",
 				);
+				OTHER_CPLUSPLUSFLAGS_QUOTED_1 = "-DJACK_LOCATION=\\\"/usr/local/bin\\\"";
 				OTHER_LDFLAGS = (
 					"-framework",
 					Carbon,
@@ -3318,7 +3316,9 @@
 				OTHER_CPLUSPLUSFLAGS = (
 					"-DMACH_RPC_MACH_SEMA",
 					"-D__SMP__",
+					"$(OTHER_CPLUSPLUSFLAGS_QUOTED_1)",
 				);
+				OTHER_CPLUSPLUSFLAGS_QUOTED_1 = "-DJACK_LOCATION=\\\"/usr/local/bin\\\"";
 				OTHER_LDFLAGS = (
 					"-framework",
 					Carbon,
@@ -3367,7 +3367,9 @@
 				OTHER_CPLUSPLUSFLAGS = (
 					"-DMACH_RPC_MACH_SEMA",
 					"-D__SMP__",
+					"$(OTHER_CPLUSPLUSFLAGS_QUOTED_1)",
 				);
+				OTHER_CPLUSPLUSFLAGS_QUOTED_1 = "-DJACK_LOCATION=\\\"/usr/local/bin\\\"";
 				OTHER_LDFLAGS = (
 					"-framework",
 					Carbon,
